--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 server.port=8090
